Closed Bug 1729279 Opened 3 years ago Closed 3 years ago

Attachment file sizes no longer included in the list of attachments printed at the end of a message

Categories

(MailNews Core :: Printing, defect, P4)

Thunderbird 91

Tracking

(thunderbird_esr91+ verified, thunderbird93+ verified)

VERIFIED FIXED
94 Branch
Tracking Status
thunderbird_esr91 + verified
thunderbird93 + verified

People

(Reporter: thomas8, Assigned: darktrojan)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [enterprise-relevance])

Attachments

(2 files)

+++ This bug was initially created as a clone of Bug #1727055 +++

Steps to reproduce:

  1. Print a mail with attachments
  2. Check attachment list at end of printout for file sizes

Actual results:

The sizes of the attachments are no longer included in the list of attachments when printing an email in 91.

Expected results:

Attachment sizes should be printed as they always were up to TB 78. Attachment size is a relevant and helpful detail in many ways.

Assignee: nobody → geoff
Status: NEW → ASSIGNED

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/c2e1acd467e0
Add attachment size to emitted HTML for printing. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch

Comment on attachment 9239718 [details]
Bug 1729279 - Add attachment size to emitted HTML for printing. r=mkmelin

[Approval Request Comment]
Regression caused by (bug #): bug 1711408
User impact if declined: printed mail doesn't show the size of attachments
Testing completed (on c-c, etc.): 3 day on c-c
Risk to taking this patch (and alternatives if risky): low

Attachment #9239718 - Flags: approval-comm-beta?

Comment on attachment 9239718 [details]
Bug 1729279 - Add attachment size to emitted HTML for printing. r=mkmelin

[Triage Comment]
Approved for beta

Attachment #9239718 - Flags: approval-comm-beta? → approval-comm-beta+

Verified using Thunderbird 93.0b2 on Windows 10.

Status: RESOLVED → VERIFIED

Comment on attachment 9239718 [details]
Bug 1729279 - Add attachment size to emitted HTML for printing. r=mkmelin

[Approval Request Comment]
Regression caused by (bug #): bug 1711408
User impact if declined: printed mail doesn't show the size of attachments
Testing completed (on c-c, etc.): in 93.0b2
Risk to taking this patch (and alternatives if risky): low

Attachment #9239718 - Flags: approval-comm-esr91?

Comment on attachment 9239718 [details]
Bug 1729279 - Add attachment size to emitted HTML for printing. r=mkmelin

[Triage Comment]
Approved for esr91

Attachment #9239718 - Flags: approval-comm-esr91? → approval-comm-esr91+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: