Bug 1729279 - Add attachment size to emitted HTML for printing. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D124705

--HG--
extra : rebase_source : 40060e627230c756306b53e1493d42d20168a93a